syntax = "proto3";

message OutputAccount {
    string account_number = 1;
    string cust_name = 2;
    double average_balance = 3;
    double accr_int = 4;
    string yld_to_call = 5;
    double interest_rate = 6;
    double base_rate_1 = 7;
    double final_ftp_rate = 8;
    int64 value_date = 9;
    int64 maturity_date = 10;
    int64 next_reprice_date = 11;
    int64 last_reprice_date = 12;
    string mis1 = 13;
    string mis2 = 14;
    string psl_code = 15;
    string prod_code_type = 16;
    string rate_flag = 17;
    string blank_1 = 18;
    string source_file_name = 19;
    string currency = 20;
    int64 gl = 21;
    string cust_id = 22;
    double final_ftp_amount = 23;
    string alm_line = 24;
    string blank_2 = 25;
    double initial_dep_amt_td = 26;
    double current_outstanding_td = 27;
    double base_rate_2 = 28;
    double adj1 = 29;
    double adj2 = 30;
    double adj3 = 31;
    double adj4 = 32;
    double adj5 = 33;
    double adj6 = 34;
    string input_benchmark = 35;
    string pdo = 36;
    string npa = 37;
    string ftp_method = 38;
    string ftp_rate_curve = 39;
    int64 org_tenor = 40;
    int64 repricing_tenor = 41;
    double fixed_spread = 42;
    double variable_spread = 43;
    string first_month_ftp = 44;
    int64 bc_as_on_rule = 45;
    int64 tenor_start_date_rule = 46;
    int64 tenor_end_date_rule = 47;
    int64 bc_as_on_applied = 48;
    int64 tenor_start_date_applied = 49;
    int64 tenor_end_date_applied = 50;   
}
